<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorDay"
              android:orientation="vertical">

    <TextView
            android:text="@string/sun"
            android:textSize="70sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:drawablePadding="20dp"
            app:drawableTopCompat="@drawable/ic_sun"/>
    <TextClock
            android:text=""
            android:textSize="30sp"
            android:textColor="@color/colorDayText"
            android:format12Hour="hh:mm:ss a"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:paddingBottom="20dp"/>
    <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

        <TableRow
                android:id="@+id/first_row"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingTop="10dp">

            <TextView
                    android:text="@string/sunrise_time"
                    android:textSize="20sp"
                    android:textColor="@color/colorDayText"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"/>
            <TextView
                    android:id="@+id/sunrise_time"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/colorDayText"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"/>

        </TableRow>

        <TableRow
                android:id="@+id/second_row"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingTop="10dp">

            <TextView
                    android:text="@string/sunrise_azimuth"
                    android:textSize="20sp"
                    android:textColor="@color/colorDayText"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"/>
            <TextView
                    android:id="@+id/sunrise_azimuth"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/colorDayText"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"/>

        </TableRow>

        <TableRow
                android:id="@+id/third_row"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingTop="10dp">

            <TextView
                    android:text="@string/sunset_time"
                    android:textSize="20sp"
                    android:textColor="@color/colorDayText"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"/>
            <TextView
                    android:id="@+id/sunset_time"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/colorDayText"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"/>

        </TableRow>

        <TableRow
                android:id="@+id/fourth_row"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingTop="10dp">

            <TextView
                    android:text="@string/sunset_azimuth"
                    android:textSize="20sp"
                    android:textColor="@color/colorDayText"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"/>
            <TextView
                    android:id="@+id/sunset_azimuth"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/colorDayText"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"/>

        </TableRow>

        <TableRow
                android:id="@+id/fifth_row"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingTop="10dp">

            <TextView
                    android:text="@string/dusk"
                    android:textSize="20sp"
                    android:textColor="@color/colorDayText"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:layout_height="wrap_content"
                    android:layout_column="0"/>
            <TextView
                    android:id="@+id/dusk_time"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/colorDayText"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"/>

        </TableRow>

        <TableRow
                android:id="@+id/sixth_row"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingTop="10dp">

            <TextView
                    android:text="@string/twilight"
                    android:textSize="20sp"
                    android:textColor="@color/colorDayText"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"/>
            <TextView
                    android:id="@+id/twilight_time"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/colorDayText"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"/>

        </TableRow>
        <TableRow
                android:id="@+id/latitude_row"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingTop="20dp">

            <TextView
                    android:text="@string/latitude"
                    android:textSize="20sp"
                    android:textColor="@color/colorDayText"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"/>
            <TextView
                    android:id="@+id/latitudeTv"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/colorDayText"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"/>

        </TableRow>

        <TableRow
                android:id="@+id/longitude_row"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingTop="10dp">

            <TextView
                    android:text="@string/longitude"
                    android:textSize="20sp"
                    android:textColor="@color/colorDayText"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"/>
            <TextView
                    android:id="@+id/longitudeTv"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/colorDayText"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"/>

        </TableRow>
    </TableLayout>

</LinearLayout>