<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBackground"
              android:orientation="vertical">

    <TextView
            android:id="@+id/city_name"
            android:text="Warsaw"
            android:textSize="20sp"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/colorDay"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

    <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@drawable/weather_info_bg"
                  android:layout_marginVertical="20dp"
                  android:layout_marginHorizontal="20dp"
                  android:orientation="vertical">

        <TextView android:id="@+id/weather_description"
                  android:text="CLEAR SKY"
                  android:textSize="40sp"
                  android:fontFamily="@font/rubik"
                  android:textColor="#ffffff"
                  android:textAlignment="center"
                  android:scaleX="0.8"
                  android:scaleY="0.8"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:drawablePadding="20dp"
                  app:drawableTopCompat="@drawable/ic_sun_100"/>
        <TextView
            android:id="@+id/temperature"
            android:text="10°C"
            android:textSize="50sp"
            android:fontFamily="@font/rubik_medium"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TableLayout
                android:id="@+id/table_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:stretchColumns="*">

        <TableRow
                android:id="@+id/first_row"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingTop="10dp">

        <TextView
                android:text="@string/feels_like"
                android:textSize="20sp"
                android:textColor="@color/colorBackground"
                android:textAlignment="center"
                android:fontFamily="@font/rubik_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"/>
        <TextView
                android:id="@+id/feels_like_temperature"
                android:text="24°C"
                android:textSize="20sp"
                android:textColor="@color/colorBackground"
                android:textAlignment="center"
                android:fontFamily="@font/rubik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"/>
        </TableRow>
            <TableRow
                    android:id="@+id/second_row"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:paddingTop="10dp">

                <TextView
                        android:text="@string/min_temperature"
                        android:textSize="20sp"
                        android:textColor="@color/colorBackground"
                        android:textAlignment="center"
                        android:fontFamily="@font/rubik_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"/>
                <TextView
                        android:id="@+id/min_temperature"
                        android:text="19°C"
                        android:textSize="20sp"
                        android:textColor="@color/colorBackground"
                        android:textAlignment="center"
                        android:fontFamily="@font/rubik"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"/>

            </TableRow>

            <TableRow
                    android:id="@+id/third_row"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:paddingTop="10dp">

                <TextView
                        android:text="@string/max_temperature"
                        android:textSize="20sp"
                        android:textColor="@color/colorBackground"
                        android:textAlignment="center"
                        android:fontFamily="@font/rubik_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"/>
                <TextView
                        android:id="@+id/max_temperature"
                        android:text="24°C"
                        android:textSize="20sp"
                        android:textColor="@color/colorBackground"
                        android:textAlignment="center"
                        android:fontFamily="@font/rubik"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

        <TableLayout
                android:id="@+id/table_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:stretchColumns="*">

            <TableRow
                    android:id="@+id/fifth_row"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:paddingTop="10dp">

                <TextView
                        android:text="Pressure"
                        android:textSize="20sp"
                        android:textColor="@color/colorDayText"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/rubik_medium"
                        android:layout_height="wrap_content"
                        android:layout_column="0"/>
                <TextView
                        android:id="@+id/pressure"
                        android:text=""
                        android:textSize="20sp"
                        android:textColor="@color/colorDayText"
                        android:textAlignment="center"
                        android:fontFamily="@font/rubik"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"/>

            </TableRow>

            <TableRow
                    android:id="@+id/sixth_row"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:paddingTop="10dp">

                <TextView
                        android:text="Humidity"
                        android:textSize="20sp"
                        android:textColor="@color/colorDayText"
                        android:textAlignment="center"
                        android:fontFamily="@font/rubik_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"/>
                <TextView
                        android:id="@+id/humidity"
                        android:text=""
                        android:textSize="20sp"
                        android:textColor="@color/colorDayText"
                        android:textAlignment="center"
                        android:fontFamily="@font/rubik"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"/>



            </TableRow>
            <TableRow
                    android:id="@+id/latitude_row"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:paddingTop="20dp">

                <TextView
                        android:text="@string/latitude"
                        android:textSize="20sp"
                        android:textColor="@color/colorDayText"
                        android:textAlignment="center"
                        android:fontFamily="@font/rubik_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"/>
                <TextView
                        android:id="@+id/latitudeTv"
                        android:text=""
                        android:textSize="20sp"
                        android:textColor="@color/colorDayText"
                        android:textAlignment="center"
                        android:fontFamily="@font/rubik"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"/>

            </TableRow>

            <TableRow
                    android:id="@+id/longitude_row"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:paddingTop="10dp">

                <TextView
                        android:text="@string/longitude"
                        android:textSize="20sp"
                        android:textColor="@color/colorDayText"
                        android:textAlignment="center"
                        android:fontFamily="@font/rubik_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"/>
                <TextView
                        android:id="@+id/longitudeTv"
                        android:text=""
                        android:textSize="20sp"
                        android:textColor="@color/colorDayText"
                        android:textAlignment="center"
                        android:fontFamily="@font/rubik"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"/>

            </TableRow>

        </TableLayout>


</LinearLayout>